--- a/auto-park/build.gradle
+++ b/auto-park/build.gradle
@@ -5,6 +5,15 @@ apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
+jar {
+    manifest {
+        attributes(
+                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+                'Main-Class': 'Layout.class'
+        )
+    }
+}
+
 repositories {
     mavenCentral()
 }
