--- a/project-test/build.gradle
+++ b/project-test/build.gradle
@@ -18,14 +18,6 @@ task fatJar(type: Jar) {
 }
 */
 
-jar {
-  manifest {
-    attributes(
-      'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-      'Main-Class': 'hello.class1'
-    )
-  }
-}
 
 repositories {
     mavenCentral()
@@ -33,4 +25,15 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile files('libs/jxl.jar')
+}
+
+jar {
+  manifest {
+    attributes(
+      'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+      'Main-Class': 'hello.class1'
+    )
+  }
 }
