--- a/auto-park/build.gradle
+++ b/auto-park/build.gradle
@@ -5,19 +5,22 @@ apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
-jar {
-    manifest {
-        attributes(
-                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-                'Main-Class': 'Layout.class'
-        )
-    }
-}
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile files('libs/jxl.jar')
 }
+
+jar {
+  manifest {
+    attributes(
+      'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+      'Main-Class': 'PAS.Layout'
+    )
+  }
+}
+
