Test jxl in PickAFile.java and fixed build.gradle

--- a/auto-park/build.gradle
+++ b/auto-park/build.gradle
@@ -18,9 +18,11 @@ dependencies {
 jar {
   manifest {
     attributes(
-      'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-      'Main-Class': 'PAS.Layout'
-    )
+      'Main-Class': 'PAS.PickAFile',
+    	'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+	
+	)
   }
+	    from(configurations.compile.collect { it.isDirectory() ? it : zipTree(it) })
 }
 
