--- a/auto-park/build.gradle
+++ b/auto-park/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 jar {
   manifest {
     attributes(
-      'Main-Class': 'PAS.PickAFile',
+      'Main-Class': 'PAS.Layout',
     	'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
 	
 	)
