--- a/autopark/build.gradle
+++ b/autopark/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 jar {
     manifest {
         attributes(
-                'Main-Class': 'PAS.Layout',
+                'Main-Class': 'PAS.SOU',
                 'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
         )
     }
