--- a/autopark/build.gradle
+++ b/autopark/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 jar {
     manifest {
         attributes(
-                'Main-Class': 'PAS.Slot',
+                'Main-Class': 'PAS.Main',
                 'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
         )
     }
