--- a/Console/app/src/main/AndroidManifest.xml
+++ b/Console/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.autopark.console">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -19,6 +20,7 @@
         </activity>
         <activity android:name=".ListDestActivity" />
         <activity android:name=".SettingsActivity" />
+        <activity android:name=".DisplaySlot"></activity>
     </application>
 
 </manifest>
